; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_http_server/src/extr_httpd_txrx.c_httpd_sess_set_send_override.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_http_server/src/extr_httpd_txrx.c_httpd_sess_set_send_override.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock_db = type { i32 }

@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @httpd_sess_set_send_override(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.sock_db*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call %struct.sock_db* @httpd_sess_get(i32 %9, i32 %10)
  store %struct.sock_db* %11, %struct.sock_db** %8, align 8
  %12 = load %struct.sock_db*, %struct.sock_db** %8, align 8
  %13 = icmp ne %struct.sock_db* %12, null
  br i1 %13, label %16, label %14

14:                                               ; preds = %3
  %15 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  store i32 %15, i32* %4, align 4
  br label %21

16:                                               ; preds = %3
  %17 = load i32, i32* %7, align 4
  %18 = load %struct.sock_db*, %struct.sock_db** %8, align 8
  %19 = getelementptr inbounds %struct.sock_db, %struct.sock_db* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  %20 = load i32, i32* @ESP_OK, align 4
  store i32 %20, i32* %4, align 4
  br label %21

21:                                               ; preds = %16, %14
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}

declare dso_local %struct.sock_db* @httpd_sess_get(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
